<resources>
    <!-- Application Labels -->
    <string name="app_name">Humidity Sensor</string>
    <string name="activity_main">Humidity Sensor</string>

    <!-- Application Icon-->
    <string name="font_icon">&#xf07a;</string>

    <!-- Settings Activity Labels -->
    <string name="activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="label_mqtt_broker">MQTT Broker</string>
    <string name="label_mqtt_port">MQTT Port</string>
    <string name="label_mqtt_topic">MQTT Topic</string>
    <string name="label_mqtt_device">Device ID</string>
    <string name="label_mqtt_mapping">Mapping Variable</string>
    <string name="label_button_save">Save</string>
    <string name="label_button_reset">Reset</string>

    <!-- About Activity Labels -->
    <string name="activity_about">About</string>
    <string name="action_about">About</string>
    <string name="label_company">{CodifyThings}</string>
    <string name="label_website">www.codifythings.com</string>
    <string name="label_about">Search our repository of code, tutorials, prototypes and books to get started with your IoT journey</string>

    <!-- Application Preferences -->
    <string name="preferences_file_key">com.codifythings.temperaturesensor.PREFERENCE_FILE_KEY</string>

    <!-- Default Preferences -->
    <string name="default_mqtt_broker">iot.eclipse.org</string>
    <string name="default_mqtt_port">1883</string>
    <string name="default_mqtt_topic">codifythings/tempsensor</string>
    <string name="default_mqtt_device">androidClient</string>
    <string name="default_mqtt_mapping">humidity</string>

</resources>
